<?xml version="1.0"?>

<resources>
    /메인 탭이름/
    <string name="app_name">TWIPEE</string>
    <string name="tab_text_1">SNS</string>
    <string name="tab_text_2">TripTalk</string>
    <string name="tab_text_3">NearFacility</string>
    <string name="tab_text_4">UserInfo</string>


    /사용자 게시물 탭 이름/
    <string name="user_post">게시물</string>
    <string name="user_map">여행지</string>
    /로그인 A,B/
    <string name="prompt_id">아이디</string>
    <string name="prompt_password">비밀번호</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_join_in">회원가입</string>
    <string name="username">이름</string>
    <string name="prompt_password_check">비밀번호 확인</string>
    <string name="birthday">생년월일</string>
    <string name="gender">성별</string>
    <string name="call_number_input">전화번호 입력</string>
    <string name="code">인증코드</string>
    <string name="code_input">인증코드 입력</string>
    <string name="user_join">가입하기</string>


    /로그인 버튼 C/
    <string name="free_travel">자유여행</string>
    <string name="travelling_alone">홀로여행</string>
    <string name="human_2">2인</string>
    <string name="human_3">3인</string>
    <string name="group">단체</string>
    <string name="kids">Kids</string>
    <string name="title_activity_trip_talk_board">TripTalkBoard</string>
    <string name="near_board">NearFacilityType</string>
    <string name="near_tourist">NearFacilityTourist</string>

    <string name="FACEBOOK_APP_ID">834599016941558</string>
    <string name="AK_LOGIN_PROTOCOL_SCHEME">ak834599016941558</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">0bda287f0a6e7e519940ea607a90c7df</string>

    <!-- 사용자 게시물 관련 -->
    <string name="user_post_review_hint">여행을 기록해 보세요...</string>
    <string name="user_post_plan_hint">여행을 계획해 보세요...</string>

    <!-- titie names -->
    <string name="title_activity_SNS_feed_search">게시물 검색</string>
    <string name="title_boardWrite">게시물 작성</string>
    <string name="title_triptalkBoard">게시판</string>
    <string name="title_Comment">댓글</string>
    <string name="title_costPlus">비용 항목 추가</string>
    <string name="title_plancost_puls">여행 비용 계획</string>
    <string name="title_plan_write">여행 계획 작성</string>
    <string name="title_post_write">게시물 작성</string>
    <string name="title_review_write">여행 후기 작성</string>
    <string name="title_review_cost">여행 비용</string>
    <string name="title_course">여행 코스 추가</string>
    <string name="title_photoUpLoad">사진 추가</string>

    <!-- next button names -->
    <string name="btn_boardWrite">게시</string>
    <string name="btn_triptalkBoard">작성하기</string>
    <string name="btn_Plus">추가</string>
    <string name="btn_check">확인</string>
    <string name="btn_write">올리기</string>

    <!-- DB -->
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="dbname_following">following</string>
    <string name="dbname_followers">followers</string>
    <string name="dbname_stories">stories</string>

    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>
    <string name="field_user_id">user_id</string>
    <string name="field_likes">likes</string>
    <string name="field_caption">caption</string>
    <string name="field_date_created">date_created</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_tags">tags</string>
    <string name="field_image_path">image_path</string>
    <string name="field_comments">comments</string>
    <string name="field_comment">comment</string>
    <string name="field_image_uri">image_uri</string>
    <string name="field_video_uri">video_uri</string>
    <string name="field_story_id">story_id</string>
    <string name="field_views">views</string>
    <string name="field_duration">duration</string>
    <string name="field_profile_photo">profile_photo</string>
    <string name="field_timestamp">timestamp</string>

    <!-- Intent Extras -->
    <string name="calling_activity">calling_activity</string>
    <string name="selected_image">selected_image</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="intent_user">intent_user</string>

    <!-- Bundle arg names -->
    <string name="user_account_settings">user_account_settings</string>

    <!-- photo types -->
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>

    <!-- Firebase messages -->
    <string name="auth_failed">Failed to Authenticate</string>
    <string name="auth_success">Authentication Success</string>

    <!-- strings -->
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="string_open_camera">Open Camera</string>
    <string name="string_next">Next</string>
    <string name="string_share">Share</string>

    <!--activity name-->
    <string name="activity_name">ActivityName</string>
    <string name="board_write">BoardWrite</string>
    <string name="post_review">PostReview</string>
    <string name="profile_activity">Profile Activity</string>
    <string name="search_activity">Search Activity</string>
    <string name="home_activity">Home Activity</string>

</resources>