<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="115dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="36sp" />

    <ImageView
        android:layout_width="427dp"
        android:layout_height="329dp"
        android:src="@drawable/toystory" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/person_0"
            android:layout_width="34dp"
            android:layout_height="40dp"
            android:layout_marginLeft="35dp"
            android:orientation="horizontal"
            android:src="@drawable/ic_person_outline_black_24dp" />

        <EditText
            android:id="@+id/userid"
            android:layout_width="287dp"
            android:layout_height="41dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="24dp"
            android:hint="@string/prompt_id"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/lock_0"
            android:layout_width="34dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="35dp"
            android:src="@drawable/ic_lock_black_24dp" />
        <EditText
            android:id="@+id/password"
            android:layout_width="286dp"
            android:layout_height="43dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="95dp"
            android:layout_marginRight="48dp"
            android:background="@drawable/btn"
            android:text="@string/action_sign_in" />

        <Button
            android:id="@+id/join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/btn"
            android:text="@string/action_join_in" />
    </LinearLayout>

    <Button
        android:id="@+id/info_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"

        android:background="#00FF0000"
        android:text="아이디/비밀번호 찾기" />

</LinearLayout>