<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/app_name" />
    /이름
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp">
        <ImageView
            android:id="@+id/person_0"
            android:layout_width="53dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_person_outline_black_24dp" />
        <EditText
            android:id="@+id/username"
            android:layout_width="304dp"
            android:layout_height="46dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/username"
            />
    </LinearLayout>
    /아이디
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp">
        <ImageView
            android:id="@+id/person_1"
            android:layout_width="53dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_person_outline_black_24dp" />
        <EditText
            android:id="@+id/prompt_id"
            android:layout_width="304dp"
            android:layout_height="44dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/prompt_id"/>
    </LinearLayout>
    /비밀번호/
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp">
        <ImageView
            android:id="@+id/lock_0"
            android:layout_width="53dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_lock_black_24dp"
            />
        <EditText
            android:id="@+id/prompt_password"
            android:layout_width="304dp"
            android:layout_height="44dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/prompt_password" />
    </LinearLayout>
    /비밀번호확인/
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp">
        <ImageView
            android:id="@+id/lock_1"
            android:layout_width="53dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_lock_black_24dp"
            />
        <EditText
            android:id="@+id/prompt_password_check"
            android:layout_width="220dp"
            android:layout_height="44dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/prompt_password_check"
            />
        <Button
            android:id="@+id/confirm"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:background="#00FF0000"
            android:onClick="onLoginBtnClick"
            android:text="확인" />
    </LinearLayout>
    /생년월일/

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/birthday_1"
            android:layout_width="53dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_card_giftcard_black_24dp" />

        <EditText
            android:id="@+id/birthday"
            android:layout_width="216dp"
            android:layout_height="44dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/birthday" />

        <Button
            android:id="@+id/cdate"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:onClick="onClickHandler"
            android:text="DatePickerDialog" />


    </LinearLayout>




    /성별/
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp">
        <ImageView
            android:id="@+id/gender"
            android:layout_width="53dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_wc_black_24dp"
            />
        <Spinner
            android:id="@+id/spinner_gender"
            style="?android:attr/spinnerItemStyle"
            android:layout_width="304dp"
            android:layout_height="44dp"
            android:layout_marginLeft="10dp"
            android:spinnerMode="dropdown"
            />
    </LinearLayout>
    /휴대전화/
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp">
        <ImageView
            android:layout_width="53dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_phone_android_black_24dp"
            />
        <TextView
            android:layout_width="304dp"
            android:layout_height="44dp"
            android:layout_marginLeft="10dp"
            android:text="휴대전화"
            android:textSize="27sp"
            />
    </LinearLayout>
    /전화번호 입력/
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp">
        <ImageView
            android:id="@+id/phone"
            android:layout_width="53dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_call_black_24dp"
            />
        <EditText
            android:id="@+id/call_number_input"
            android:layout_width="220dp"
            android:layout_height="44dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/call_number_input"
            />

        <Button
            android:id="@+id/code"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:background="#00FF0000"
            android:text="인증코드"
            android:onClick="onLoginBtnClick"/>
    </LinearLayout>
    /인증코드 입력/
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="14.5dp">
        <ImageView
            android:id="@+id/코드입력"
            android:layout_width="53dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_edit_black_24dp"
            />
        <EditText
            android:id="@+id/code_input"
            android:layout_width="220dp"
            android:layout_height="44dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/code_input"
            />


    </LinearLayout>

    <Button
        android:id="@+id/user_join"
        android:layout_width="327dp"
        android:layout_height="52dp"
        android:layout_marginLeft="40dp"
        android:background="#00FF0000"
        android:onClick="onLoginBtnClick"
        android:text="가입하기"
        android:enabled="false"/>


</LinearLayout>
